[backend] merge with new schema📄
