# pkg/router/buyer.go
@@ -3,8 +3,10 @@ package router
 import (
 	"math"
 	"net/http"
+	"sort"
 
 	"github.com/jackc/pgx/v5"
+	"github.com/jackc/pgx/v5/pgtype"
 	"github.com/jykuo-love-shiritori/twp/db"
 	"github.com/jykuo-love-shiritori/twp/pkg/common"
 	"github.com/jykuo-love-shiritori/twp/pkg/constants"
@@ -204,8 +206,20 @@ func buyerAddProductToCart(pg *db.DB, logger *zap.SugaredLogger) echo.HandlerFun
 	}
 }
 
-// @Summary		Buyer Get coupon of cart/shop
-// @Description	Buyer get coupon of cart/shop
+// numericToFloat64 converts a pgtype.Numeric to a float64.
+
+func numericToFloat64(n pgtype.Numeric) (float64, error) {
+	f, err := n.Float64Value()
+	return f.Float64, err
+}
+
+type couponV2 struct {
+	db.GetCouponsFromCartRow
+	DiscountFloat float64
+}
+
+// @Summary		Buyer Get usable coupon of cart/shop
+// @Description	Buyer get usable coupon of cart/shop
 // @Tags			Buyer, Cart, Coupon
 // @Accept			json
 // @Produce		json
@@ -220,16 +234,111 @@ func buyerGetCoupon(pg *db.DB, logger *zap.SugaredLogger) echo.HandlerFunc {
 		username := "🤡"
 		var param db.GetUsableCouponsParams
 		param.Username = username
+		result := []db.GetUsableCouponsRow{}
 		if err := c.Bind(&param); err != nil {
 			logger.Errorw("failed to bind coupon in cart", "error", err)
 			return echo.NewHTTPError(http.StatusBadRequest)
 		}
-		coupon, err := pg.Queries.GetUsableCoupons(c.Request().Context(), param)
+		usableCoupon, err := pg.Queries.GetUsableCoupons(c.Request().Context(), param)
 		if err != nil {
 			logger.Errorw("failed to get coupon", "error", err)
 			return echo.NewHTTPError(http.StatusInternalServerError)
 		}
-		return c.JSON(http.StatusOK, coupon)
+		cartCoupon, err := pg.Queries.GetCouponsFromCart(c.Request().Context(), db.GetCouponsFromCartParams{Username: username, CartID: param.CartID})
+		if err != nil {
+			logger.Errorw("failed to get coupon", "error", err)
+			return echo.NewHTTPError(http.StatusInternalServerError)
+		}
+		cartProduct, err := pg.Queries.GetProductFromCart(c.Request().Context(), param.CartID)
+		if err != nil {
+			logger.Errorw("failed to get product in cart", "error", err)
+			return echo.NewHTTPError(http.StatusInternalServerError)
+		}
+		productCount := make(map[int32]int32)
+		productTag := make(map[int32][]db.GetProductTagRow)
+		for _, product := range cartProduct {
+			productCount[product.ProductID] = product.Quantity
+			productTag[product.ProductID], err = pg.Queries.GetProductTag(c.Request().Context(), product.ProductID)
+			if err != nil {
+				logger.Errorw("failed to get product tag", "error", err)
+				return echo.NewHTTPError(http.StatusInternalServerError)
+			}
+		}
+		var cartCouponV2 []couponV2
+		for _, coupon := range cartCoupon {
+			discount, err := numericToFloat64(coupon.Discount)
+			if err != nil {
+				logger.Errorw("failed to get discount", "error", err)
+				return echo.NewHTTPError(http.StatusInternalServerError)
+			}
+			cartCouponV2 = append(cartCouponV2, couponV2{GetCouponsFromCartRow: coupon, DiscountFloat: discount})
+		}
+		shippingFlag := false
+		// sort CartCoupon by type (percentage => fixed), discount (high => low)
+		sort.Slice(cartCouponV2, func(i, j int) bool {
+			if cartCouponV2[i].Type == cartCouponV2[j].Type {
+				return cartCouponV2[i].DiscountFloat > cartCouponV2[j].DiscountFloat
+			}
+			return cartCouponV2[i].Type < cartCouponV2[j].Type
+		})
+		// all the coupon in cart should be eligible
+		for _, coupon := range cartCouponV2 {
+			couponTag, err := pg.Queries.GetCouponTag(c.Request().Context(), coupon.ID)
+			if err != nil {
+				logger.Errorw("failed to get coupon tag", "error", err)
+				return echo.NewHTTPError(http.StatusInternalServerError)
+			}
+			if coupon.Type == db.CouponTypeShipping {
+				shippingFlag = true
+				continue
+			}
+		outerLoop:
+			for _, product := range cartProduct {
+				if productCount[product.ProductID] == 0 {
+					continue
+				}
+				for _, ct := range couponTag {
+					for _, pt := range productTag[product.ProductID] {
+						if ct.TagID == pt.TagID {
+							productCount[product.ProductID] -= 1
+							break outerLoop
+						}
+					}
+				}
+			}
+		}
+
+		for _, usable := range usableCoupon {
+			couponTag, err := pg.Queries.GetCouponTag(c.Request().Context(), usable.ID)
+			if err != nil {
+				logger.Errorw("failed to get coupon tag", "error", err)
+				return echo.NewHTTPError(http.StatusInternalServerError)
+			}
+			if usable.Type == db.CouponTypeShipping && shippingFlag {
+				continue
+			}
+
+			// Check if the coupon is valid for any of the products in the cart
+			matchFlag := false
+		outerLoop2:
+			for _, product := range cartProduct {
+				if productCount[product.ProductID] == 0 {
+					continue
+				}
+				for _, ct := range couponTag {
+					for _, pt := range productTag[product.ProductID] {
+						if ct.TagID == pt.TagID {
+							matchFlag = true
+							break outerLoop2
+						}
+					}
+				}
+			}
+			if matchFlag {
+				result = append(result, usable)
+			}
+		}
+		return c.JSON(http.StatusOK, result)
 	}
 }
 
@@ -253,6 +362,103 @@ func buyerAddCouponToCart(pg *db.DB, logger *zap.SugaredLogger) echo.HandlerFunc
 			logger.Errorw("failed to bind coupon in cart", "error", err)
 			return echo.NewHTTPError(http.StatusBadRequest)
 		}
+		cartProduct, err := pg.Queries.GetProductFromCart(c.Request().Context(), param.CartID)
+		if err != nil {
+			logger.Errorw("failed to get product in cart", "error", err)
+			return echo.NewHTTPError(http.StatusInternalServerError)
+		}
+		productCount := make(map[int32]int32)
+		productTag := make(map[int32][]db.GetProductTagRow)
+		for _, product := range cartProduct {
+			productCount[product.ProductID] = product.Quantity
+			productTag[product.ProductID], err = pg.Queries.GetProductTag(c.Request().Context(), product.ProductID)
+			if err != nil {
+				logger.Errorw("failed to get product tag", "error", err)
+				return echo.NewHTTPError(http.StatusInternalServerError)
+			}
+		}
+		cartCoupon, err := pg.Queries.GetCouponsFromCart(c.Request().Context(), db.GetCouponsFromCartParams{Username: username, CartID: param.CartID})
+		if err != nil {
+			logger.Errorw("failed to get coupon", "error", err)
+			return echo.NewHTTPError(http.StatusInternalServerError)
+		}
+		var cartCouponV2 []couponV2
+		for _, coupon := range cartCoupon {
+			discount, err := numericToFloat64(coupon.Discount)
+			if err != nil {
+				logger.Errorw("failed to get discount", "error", err)
+				return echo.NewHTTPError(http.StatusInternalServerError)
+			}
+			cartCouponV2 = append(cartCouponV2, couponV2{GetCouponsFromCartRow: coupon, DiscountFloat: discount})
+		}
+		shippingFlag := false
+		// sort CartCoupon by type (percentage => fixed), discount (high => low)
+		sort.Slice(cartCouponV2, func(i, j int) bool {
+			if cartCouponV2[i].Type == cartCouponV2[j].Type {
+				return cartCouponV2[i].DiscountFloat > cartCouponV2[j].DiscountFloat
+			}
+			return cartCouponV2[i].Type < cartCouponV2[j].Type
+		})
+		// all the coupon in cart should be eligible
+		// match coupons to its product
+		for _, coupon := range cartCouponV2 {
+			couponTag, err := pg.Queries.GetCouponTag(c.Request().Context(), coupon.ID)
+			if err != nil {
+				logger.Errorw("failed to get coupon tag", "error", err)
+				return echo.NewHTTPError(http.StatusInternalServerError)
+			}
+			if coupon.Type == db.CouponTypeShipping {
+				shippingFlag = true
+				continue
+			}
+		outerLoop:
+			for _, product := range cartProduct {
+				if productCount[product.ProductID] == 0 {
+					continue
+				}
+				for _, ct := range couponTag {
+					for _, pt := range productTag[product.ProductID] {
+						if ct.TagID == pt.TagID {
+							productCount[product.ProductID] -= 1
+							break outerLoop
+						}
+					}
+				}
+			}
+		}
+		// check new coupon eligibility
+		couponDetail, err := pg.Queries.GetCouponDetail(c.Request().Context(), param.CouponID)
+		if err != nil {
+			logger.Errorw("failed to get coupon detail", "error", err)
+			return echo.NewHTTPError(http.StatusInternalServerError)
+		}
+		if couponDetail.Type == db.CouponTypeShipping && shippingFlag {
+			return echo.NewHTTPError(http.StatusBadRequest, "multiple shipping coupon")
+		}
+		couponTag, err := pg.Queries.GetCouponTag(c.Request().Context(), param.CouponID)
+		if err != nil {
+			logger.Errorw("failed to get coupon tag", "error", err)
+			return echo.NewHTTPError(http.StatusInternalServerError)
+		}
+		couponValid := false
+	outerLoop2:
+		for _, product := range cartProduct {
+			if productCount[product.ProductID] == 0 {
+				continue
+			}
+			for _, ct := range couponTag {
+				for _, pt := range productTag[product.ProductID] {
+					if ct.TagID == pt.TagID {
+						couponValid = true
+						break outerLoop2
+					}
+				}
+			}
+		}
+		if !couponValid {
+			return echo.NewHTTPError(http.StatusBadRequest, "coupon not valid for any product in cart")
+		}
+
 		rows, err := pg.Queries.AddCouponToCart(c.Request().Context(), param)
 		if err != nil {
 			logger.Errorw("failed to add coupon to cart", "error", err)
@@ -379,7 +585,6 @@ func buyerGetCheckout(pg *db.DB, logger *zap.SugaredLogger) echo.HandlerFunc {
 		var params db.GetCouponsFromCartParams
 		params.CartID = cartID
 		params.Username = username
-
 		coupons, err := pg.Queries.GetCouponsFromCart(c.Request().Context(), params)
 		if err != nil {
 			logger.Errorw("failed to get coupons from cart", "error", err)
